--- a/static/css/baseDark.css
+++ b/static/css/baseDark.css
@@ -5,6 +5,10 @@ body, html {
     background-color: #181818;
 }
 
+hr {
+    border-top: 1px solid rgba(255,255,255,.15)
+}
+
 .comments {
   height:360px;
   overflow-y: scroll;
